# guile-mqtt

./: AUTHORS  Makefile.am  NEWS  README.md  acinclude.m4  configure.ac  pre-inst-env.in
doc/: guile-mqtt.texi
examples/: README.md  client.scm  publish.scm  subscribe.scm
module/: Makefile.am
module/ffi/: mosquitto.ffi
module/mosquitto/: client.scm  version.scm.in
module/mosquitto/foreign/: README
